--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="howesDecor. is a brand local to the Okaloosa FL. area which refurbishes furniture at our booth in an antique store.">
 	<meta name="keywords" content="howesdecor, furniture, okaloosa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
