--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="blog.css">
 	
 	<script defer src="javascript/tags.js"></script>
-	<script defer src="javascript/article2.js"></script>
+	<script defer src="javascript/blog-controller.js"></script>
 	
 
     <title>Blog</title>
