--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="howesDecor. is a brand local to the Okaloosa FL. area which refurbishes furniture at our booth in an antique store.">
+    <meta name="description" content="Check out the blog of the owners behind howesDecor.,a brand local to the Okaloosa FL. area which refurbishes furniture at our booth in an antique store.">
 	<meta name="keywords" content="howesdecor, furniture, okaloosa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
@@ -29,11 +29,13 @@
 					<summary><span id="hamburger" class="material-symbols-outlined">menu</span></summary>
 					<ul>
 						<li><h4>Navigation &mdash;</h4></li>
-						<li><a class="nav-link" href="shop.html">Shop</a></li>
-						<li><a class="nav-link" href="about.html">About</a></li>
-						<li><a class="nav-link" href="blog.html">Blog</a></li>
-						<li><a class="nav-link" href="contact.html">Contact</a></li>
-					</ul>
+						<li><a class="nav-link" href="index.html">Home</a></li>
+					    <li><a class="nav-link" href="shop.html">Shop</a></li>
+					    <!--<li><a class="nav-link" href="about.html">About</a></li> -->
+					   
+					   <li><a class="nav-link active" href="blog.html">Blog</a></li>
+					   <!-- <li><a class="nav-link" href="contact.html">Contact</a></li> -->
+				   </ul>
 			</details>
 		</div>
 	</nav>
@@ -45,7 +47,7 @@
 					<h2 class="article-header">Our blog</h2>
 				</section>
 
-				<noscript>This page requires Javascript to be enabled to function properly. Visit <a href="https://www.enable-javascript.com/" target="_blank">www.enable-javascript.com/</a> if you need assitance.</noscript>
+				<noscript>This page requires Javascript to be enabled to function properly. We use Javascript to dynamically render the page items for ease of edit. Visit <a href="https://www.enable-javascript.com/" target="_blank">www.enable-javascript.com/</a> if you need assitance.</noscript>
 
 				<!-- template blog -->
 				<div id="blog-container" class="blog-container">
@@ -83,7 +85,7 @@
 				<div class="findus">
 					<h4>Find us at our booth &mdash;</h4>
 					<address>Booth 228;<br> 74b Beal Pkwy NW, Fort Walton Beach, FL 32548</address><br>
-					<a class="email" href="mailto:example@example.com"><address>example@example.com</address></a>
+					<a class="email" href="mailto:howesdecor@gmail.com"><address>howesdecor@gmail.com</address></a>
 				</div>
 				<div class="follow">
 					<h4>Find us on socials &mdash;</h4>
@@ -97,9 +99,9 @@
 			<div class="navigation">
 				<a class="footer-link" href="index.html">Home</a> | 
 				<a class="footer-link" href="shop.html">Shop</a> |
-				<a class="footer-link" href="about.html">About</a> |
-				<a class="footer-link" href="blog.html">Blog</a> |
-				<a class="footer-link" href="contact.html">Contact</a>
+				<!-- <a class="footer-link" href="about.html">About</a> | -->
+				<a class="footer-link" href="blog.html">Blog</a> <!--|-->
+				<!-- <a class="footer-link" href="contact.html">Contact</a> -->
 			</div>
 			<div class="legal">
 				<p>&copy; Copyright 2023, howesDecor.</p>
