--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link rel="stylesheet" type="text/css" href="blog.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/blog.css">
 	
 	<script defer src="javascript/tags.js"></script>
 	<script defer src="javascript/blog-controller.js"></script>
@@ -48,30 +48,9 @@
 				</section>
 
 				<noscript>This page requires Javascript to be enabled to function properly. We use Javascript to dynamically render the page items for ease of edit. Visit <a href="https://www.enable-javascript.com/" target="_blank">www.enable-javascript.com/</a> if you need assitance.</noscript>
-
-				<!-- template blog -->
+				
 				<div id="blog-container" class="blog-container">
-					<section id="blog-post" class="blog-post">
-						<div id="blog-dates" class="blog-dates">
-							<span id="month">{mon}</span>
-							<span id="day">{day}</span>,
-							<span id="year">{year}</span>
-							<span>&middot;</span>
-							<span id="time">{time}</span>
-						</div>
-						<div id="blog-tags" class="blog-tags">
-							<span id="tag" class="tags">{tag}</span>
-						</div>
-						<div id="blog-header" class="blog-header">
-							<h3 id="header" class="header">{header}</h3>
-						</div>
-						<div id="blog-content" class="blog-content">
-							<p id="content" class="content">{content}</p>
-						</div>
-						<div id="blog-cta" class="blog-cta">
-							<a href="#" target="_blank" id="href" class="read-more"><span id="cta-text" class="cta-text cta">{link}</span></a>
-						</div>
-					</section>
+					<!--JS renders post here-->
 				</div>
 
 				
@@ -89,8 +68,8 @@
 				</div>
 				<div class="follow">
 					<h4>Find us on socials &mdash;</h4>
-					<a href="https://www.facebook.com/profile.php?id=100089197627805" target="_blank"><img src="images/legal/social1.png" width="20px" height="20px"></a>
-					<a href="https://www.instagram.com/howesdecor/" target="_blank"><img src="images/legal/social2.png" width="20px" height="20px"></a>
+					<a href="https://www.facebook.com/profile.php?id=100089197627805" target="_blank"><img src="images/legal/facebook_logo.png" width="20px" height="20px"></a>
+					<a href="https://www.instagram.com/howesdecor/" target="_blank"><img src="images/legal/instagram_logo.png" width="20px" height="20px"></a>
 				</div>
 			</div>
 		</div>
@@ -110,4 +89,4 @@
 		</div>
 	</footer>
 </body>
-</html>
+</html> -->
