--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,6 @@
 						<li><a class="nav-link" href="index.html">Home</a></li>
 					    <li><a class="nav-link" href="shop.html">Shop</a></li>
 					    <!--<li><a class="nav-link" href="about.html">About</a></li> -->
-					   
 					   <li><a class="nav-link active" href="blog.html">Blog</a></li>
 					   <!-- <li><a class="nav-link" href="contact.html">Contact</a></li> -->
 				   </ul>
@@ -47,7 +46,7 @@
 					<h2 class="article-header">Our blog</h2>
 				</section>
 
-				<noscript>This page requires Javascript to be enabled to function properly. We use Javascript to dynamically render the page items for ease of edit. Visit <a href="https://www.enable-javascript.com/" target="_blank">www.enable-javascript.com/</a> if you need assitance.</noscript>
+				<noscript>This app <strong>requires</strong> Javascript to be enabled to function properly. We use Javascript to dynamically render the page items for ease of edit.</noscript>
 				
 				<div id="blog-container" class="blog-container">
 					<!--JS renders post here-->
@@ -89,4 +88,4 @@
 		</div>
 	</footer>
 </body>
-</html> -->
+</html>
