--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
 		</div>
 		<div id="nav-links-container" class="nav-links-container">
 			<details id="hidden-links" class="hidden-links">
-					<summary><span id="hamburger" class="material-symbols-outlined">menu</span></summary>
+					<summary><span id="hamburger" aria-label="Hamburger menu" class="material-symbols-outlined">menu</span></summary>
 					<ul>
 						<li><h4>Navigation &mdash;</h4></li>
 						<li><a class="nav-link" href="index.html">Home</a></li>
