--- a/index.html
+++ b/index.html
@@ -55,11 +55,28 @@
 
 	<article>
 		<section class="featured-products-section">
+			<noscript>This section of the app <strong>requires</strong> Javascript to be enabled to function properly.</noscript>
 			<h2>Featured Products</h2>
 			
 			<div class="featured-container">
 			</div>
-			<a href="shop.html" class="link-to">See all</a>
+			<a href="shop.html" class="link-to">See all products</a>
+		</section>
+
+		<section class="about-us-section">
+			<h2>About Us</h2>
+			
+			<div class="about-container">
+				<div class="about-text">
+					<p>
+						<span id="about-para1">howesDecor. is a company which specializes in selling handcrafted, upcycled, and refinished furniture and home decor. Our company is local to the Okaloosa, FL. area and sell these products at our booth, #228, located at Defrance Antiques on Beal, Fort Walton Beach, Florida.</span> 
+						<span id="about-para1">We created howesDecor. to express our creativity through what we love doing, and have done for over a decade as a hobby. Now we are blessed with an opportunity to turn our passion into profit.</span>
+					</p>
+
+					<a href="about.html" class="link-to">Read full story</a>
+				</div>
+			</div>
+			
 		</section>
 		
 	</article>
