--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="howesDecor. is a brand local to the Okaloosa FL. area which refurbishes furniture at our booth in an antique store.">
+    <meta name="description" content="The home page of howesDecor., a brand local to the Okaloosa FL. area which refurbishes furniture at our booth in an antique store.">
 	<meta name="keywords" content="howesdecor, furniture, okaloosa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
@@ -36,11 +36,11 @@
 			<details id="hidden-links" class="hidden-links">
 					<summary><span id="hamburger" aria-label="Hamburger menu" class="material-symbols-outlined">menu</span></summary>
 					<ul>
-						<li><a class="nav-link" href="shop.html">Shop</a></li>
+						<li><a class="nav-link" href="products.html">Products</a></li>
 						<li><a class="nav-link" href="about.html">About</a></li>
-						<li><a class="nav-link" href="blog.html">Blog</a></li>
-						<li><a class="nav-link" href="contact.html">Contact</a></li>
-					</ul>
+					    <li><a class="nav-link active" href="blog.html">Blog</a></li>
+					    <li><a class="nav-link" href="contact.html">Contact</a></li>
+				   </ul>
 			</details>
 		</div>
 	</nav>
