--- a/products.html
+++ b/products.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="Check out the blog of the owners behind howesDecor.,a brand local to the Okaloosa FL. area which refurbishes furniture at our booth in an antique store.">
+    <meta name="description" content="Check out all the products of howesDecor.,a brand local to the Okaloosa FL. area which refurbishes furniture at our booth in an antique store.">
 	<meta name="keywords" content="howesdecor, furniture, okaloosa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link rel="stylesheet" type="text/css" href="css/blog.css">
+	<link rel="stylesheet" type="text/css" href="css/shop.css">
 	
 	<script defer src="javascript/tags.js"></script>
-	<script defer src="javascript/blog-controller.js"></script>
+	<script defer src="javascript/shop-controller.js"></script>
 	
 
     <title>Blog</title>
@@ -41,12 +41,12 @@
         <article>
 			<div class="wrapper">
 				<section class=" page-about about">
-					<h2 class="article-header">Our blog</h2>
+					<h2 class="article-header">Our products</h2>
 				</section>
 
 				<noscript>This app <strong>requires</strong> Javascript to be enabled to function properly. We use Javascript to dynamically render the page items for ease of edit.</noscript>
 				
-				<div id="blog-container" class="blog-container">
+				<div id="shop-container" class="shop-container">
 					<!--JS renders post here-->
 				</div>
 
@@ -75,9 +75,9 @@
 			<div class="navigation">
 				<a class="footer-link" href="index.html">Home</a> | 
 				<a class="footer-link" href="shop.html">Shop</a> |
-				<!-- <a class="footer-link" href="about.html">About</a> | -->
-				<a class="footer-link" href="blog.html">Blog</a> <!--|-->
-				<!-- <a class="footer-link" href="contact.html">Contact</a> -->
+				<a class="footer-link" href="about.html">About</a> |
+				<a class="footer-link" href="blog.html">Blog</a> |
+				<a class="footer-link" href="contact.html">Contact</a>
 			</div>
 			<div class="legal">
 				<p>&copy; Copyright 2023, howesDecor.</p>
