--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="about-container">
 				<div class="about-text">
 					<p>
-						<span id="about-para1">howesDecor. is a company which specializes in selling handcrafted, upcycled, and refinished furniture and home decor. Our company is local to the Okaloosa, FL. area and sell these products at our booth, #228, located at Defrance Antiques on Beal, Fort Walton Beach, Florida.</span> 
+						<span id="about-para1">howesDecor. is a company which specializes in selling handcrafted, upcycled, and refinished furniture and home decor. Our company is local to the Okaloosa, FL. area and sells these products at our booth, #228, located at Defrance Antiques on Beal, Fort Walton Beach, Florida.</span> 
 						<span id="about-para1">We created howesDecor. to express our creativity through what we love doing, and have done for over a decade as a hobby. Now we are blessed with an opportunity to turn our passion into profit.</span>
 					</p>
 
