--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			
 			<div class="featured-container">
 			</div>
-			<a href="shop.html" class="link-to">See all products</a>
+			<a href="products.html" class="link-to">See all products</a>
 		</section>
 
 		<section class="about-us-section">
@@ -82,33 +82,30 @@
 	</article>
 
     <footer>
-		<div class="center">
-			<div class="footer-container">
-				<div class="findus">
-					<h4>Find us at our booth &mdash;</h4>
-					<address>Booth 228;<br> 74b Beal Pkwy NW, Fort Walton Beach, FL 32548</address><br>
-					<a class="email" href="mailto:howesdecor@gmail.com">howesdecor@gmail.com</a>
-				</div>
-				<div class="follow">
-					<h4>Find us on socials &mdash;</h4>
-					<a href="https://www.facebook.com/profile.php?id=100089197627805" target="_blank"><img src="images/legal/facebook_logo.png"></a>
-					<a href="https://www.instagram.com/howesdecor/" target="_blank"><img src="images/legal/instagram_logo.png"></a>
+			<div class="center">
+				<div class="footer-container">
+					<div class="findus">
+						<h4>Find us at our booth &mdash;</h4>
+						<address>Booth 228;<br> 74b Beal Pkwy NW, Fort Walton Beach, FL 32548</address><br>
+						<a class="email" href="mailto:howesdecor@gmail.com">howesdecor@gmail.com</a>
+					</div>
+					<div class="follow">
+						<h4>Find us on socials &mdash;</h4>
+						<a href="https://www.facebook.com/profile.php?id=100089197627805" target="_blank"><img src="images/legal/facebook_logo.png"></a>
+						<a href="https://www.instagram.com/howesdecor/" target="_blank"><img src="images/legal/instagram_logo.png"></a>
+					</div>
 				</div>
 			</div>
-		</div>
-
-
 			<div class="navigation">
 				<a class="footer-link" href="index.html">Home</a> | 
-				<a class="footer-link" href="shop.html">Shop</a> |
+				<a class="footer-link" href="products.html">Shop</a> |
 				<a class="footer-link" href="about.html">About</a> |
 				<a class="footer-link" href="blog.html">Blog</a> | 
 				<a class="footer-link" href="contact.html">Contact</a>
 			</div>
 			<div class="legal">
 				<p>&copy; Copyright 2023, howesDecor.</p>
-			</div>
-			
+			</div>	
 		</div>
 	</footer>
 </body>
