--- a/products.html
+++ b/products.html
@@ -15,7 +15,7 @@
 	<script defer src="javascript/shop-controller.js"></script>
 	
 
-    <title>Blog</title>
+    <title>Products</title>
 
     <style></style>
 </head>
@@ -61,29 +61,26 @@
 				<div class="findus">
 					<h4>Find us at our booth &mdash;</h4>
 					<address>Booth 228;<br> 74b Beal Pkwy NW, Fort Walton Beach, FL 32548</address><br>
-					<a class="email" href="mailto:howesdecor@gmail.com"><address>howesdecor@gmail.com</address></a>
+					<a class="email" href="mailto:howesdecor@gmail.com">howesdecor@gmail.com</a>
 				</div>
 				<div class="follow">
 					<h4>Find us on socials &mdash;</h4>
-					<a href="https://www.facebook.com/profile.php?id=100089197627805" target="_blank"><img src="images/legal/facebook_logo.png" width="20px" height="20px"></a>
-					<a href="https://www.instagram.com/howesdecor/" target="_blank"><img src="images/legal/instagram_logo.png" width="20px" height="20px"></a>
+					<a href="https://www.facebook.com/profile.php?id=100089197627805" target="_blank"><img src="images/legal/facebook_logo.png"></a>
+					<a href="https://www.instagram.com/howesdecor/" target="_blank"><img src="images/legal/instagram_logo.png"></a>
 				</div>
 			</div>
 		</div>
-
-
-			<div class="navigation">
-				<a class="footer-link" href="index.html">Home</a> | 
-				<a class="footer-link" href="shop.html">Shop</a> |
-				<a class="footer-link" href="about.html">About</a> |
-				<a class="footer-link" href="blog.html">Blog</a> |
-				<a class="footer-link" href="contact.html">Contact</a>
-			</div>
-			<div class="legal">
-				<p>&copy; Copyright 2023, howesDecor.</p>
-			</div>
-			
+		<div class="navigation">
+			<a class="footer-link" href="index.html">Home</a> | 
+			<a class="footer-link" href="products.html">Shop</a> |
+			<a class="footer-link" href="about.html">About</a> |
+			<a class="footer-link" href="blog.html">Blog</a> | 
+			<a class="footer-link" href="contact.html">Contact</a>
 		</div>
-	</footer>
+		<div class="legal">
+			<p>&copy; Copyright 2023, howesDecor.</p>
+		</div>	
+	</div>
+</footer>
 </body>
 </html>
