--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 						<h4>Find us on socials &mdash;</h4>
 						<a href="https://www.facebook.com/profile.php?id=100089197627805" target="_blank"><img src="images/legal/facebook_logo.png"></a>
 						<a href="https://www.instagram.com/howesdecor/" target="_blank"><img src="images/legal/instagram_logo.png"></a>
+						<a href="https://www.threads.net/howesdecor/" target="_blank"><img src="images/legal/threads_logo.png"></a>
 					</div>
 				</div>
 			</div>
