--- a/about.html
+++ b/about.html
@@ -12,10 +12,8 @@
 	<link rel="stylesheet" type="text/css" href="css/about.css">
 	
 	<script defer src="javascript/tags.js"></script>
-	<script defer src="javascript/shop-controller.js"></script>
-	
 
-    <title>Products</title>
+    <title>About us</title>
 
     <style></style>
 </head>
