--- a/about.html
+++ b/about.html
@@ -54,7 +54,11 @@
 
                     <p>We moved to the beautiful Emerald Coast in 2018 and enjoy spending our down time on the beach or water. We have 2 teenage boys, and 1 dog. Both of the boys have been involved in howesDecor, but mostly on the digital side of things: from photography to web development to running our socials.</p>
 
-                    <img src="images/pages/" alt="">
+                    <div class="blog-image">
+                        <img src="images/other/james_madelyn.jpg" alt="May be an image of James and Madelyn, howesDecor owners, standing in front of a blue van.">
+                        <figcaption>Darris Hartman Photography</figcaption>
+                    </div>
+                    
 				</div>
 
                 <div id="story-container" class="story-container">
@@ -67,6 +71,8 @@
                      <p>We have steadily grown our assortment of furniture and items we sell to what we have now, over 30 unique items we found at yard sales, auctions, some were even given to us to make new again. We are so grateful for this opportunity and we love being able to express our passion in every piece we create. </p>
 
                      <p>If you want to check out our booth, you can find us at 74b Beal Pkwy NW, Fort Walton Beach, FL 32548 - we are booth #228.</p>
+
+                     <img src="images/other/booth_full.jpg" alt="May be an image of booth 228 at Defrance Antiques on Beal.">
                 </div>
 
 				
