--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
+
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<link rel="stylesheet" type="text/css" href="css/blog.css">
+	<link rel="stylesheet" type="text/css" href="css/find-us.css">
 	
 	<script defer src="javascript/featured.js"></script>
 	<script defer src="javascript/index-snippet-controller.js"></script>
@@ -63,6 +68,21 @@
 			<a href="products.html" class="link-to">See all products</a>
 		</section>
 
+		<section class="socials-section">
+			<section class=" page-about about">
+				<h2 class="article-header">Find us on our socials</h2>
+			</section>
+			
+			<div class="socials-container">
+				<p>Want to find out the latest of what's going on at howesDecor? Be sure to check out our socials pages. You can find our profile as @howesdecor on Facebook, Instagram, and Threads.</p>
+				<div class="follow">
+					<a href="https://www.facebook.com/profile.php?id=100089197627805" target="_blank"><img src="images/legal/facebook_logo.png"></a>
+					<a href="https://www.instagram.com/howesdecor/" target="_blank"><img src="images/legal/instagram_logo.png"></a>
+					<a href="https://www.threads.net/howesdecor/" target="_blank"><img src="images/legal/threads_logo.png"></a>
+				</div>
+			</div>
+		</section>
+
 		<section class="about-us-section">
 			<h2>About Us</h2>
 			
@@ -78,7 +98,6 @@
 			</div>
 			
 		</section>
-		
 	</article>
 
     <footer>
