--- a/index.html
+++ b/index.html
@@ -68,20 +68,18 @@
 			<a href="products.html" class="link-to">See all products</a>
 		</section>
 
-		<section class="socials-section">
-			<section class=" page-about about">
-				<h2 class="article-header">Find us on our socials</h2>
-			</section>
+		<div class="socials-wrapper">
+			<section class="socials-section">
+				<section class=" section-about about">
+					<h2 class="section-header">Get in touch with us</h2>
+				</section>
 			
-			<div class="socials-container">
-				<p>Want to find out the latest of what's going on at howesDecor? Be sure to check out our socials pages. You can find our profile as @howesdecor on Facebook, Instagram, and Threads.</p>
-				<div class="follow">
-					<a href="https://www.facebook.com/profile.php?id=100089197627805" target="_blank"><img src="images/legal/facebook_logo.png"></a>
-					<a href="https://www.instagram.com/howesdecor/" target="_blank"><img src="images/legal/instagram_logo.png"></a>
-					<a href="https://www.threads.net/howesdecor/" target="_blank"><img src="images/legal/threads_logo.png"></a>
+				<div class="main-container">
+					<p>Need to get in touch with us? Send us an email, our response time may vary by the day, but we strive to respond to all emails within two-three business days.</p>
+					<a href="mailto:howesdecor@gmail.com" class="link-to email">Email us</a>
 				</div>
-			</div>
-		</section>
+			</section>
+		</div>
 
 		<section class="about-us-section">
 			<h2>About Us</h2>
