--- a/index.html
+++ b/index.html
@@ -23,11 +23,6 @@
 
     <title>Home</title>
     <style>
-		.wrapper{
-			width: 100%;
-			margin-block:2rem;
-
-		}
 	</style>
 </head>
 <body>
@@ -59,7 +54,7 @@
     </header>
 
 	<article>
-		<section class="featured-products-section">
+		<section class="featured-products-section wrapper">
 			<noscript>This section of the app <strong>requires</strong> Javascript to be enabled to function properly.</noscript>
 			<h2>Featured Products</h2>
 			
@@ -68,24 +63,24 @@
 			<a href="products.html" class="link-to">See all products</a>
 		</section>
 
-		<div class="socials-wrapper">
+		<div class="socials-wrapper wrapper">
 			<section class="socials-section">
-				<section class=" section-about about">
-					<h2 class="section-header">Get in touch with us</h2>
-				</section>
-			
-				<div class="main-container">
-					<p>Need to get in touch with us? Send us an email, our response time may vary by the day, but we strive to respond to all emails within two-three business days.</p>
-					<a href="mailto:howesdecor@gmail.com" class="link-to email">Email us</a>
+				<div class="follow main-container">
+					<h2>Follow our socials</h2>
+
+					<p>Wondering about the latest of what's going on at howesDecor? Follow our social pages for regular updates about new products, what's in the booth, sales, etc!</p>
+
+					<a href="https://www.facebook.com/profile.php?id=100089197627805" target="_blank"><img src="images/legal/facebook_logo.png"></a>
+					<a href="https://www.instagram.com/howesdecor/" target="_blank"><img src="images/legal/instagram_logo.png"></a>
+					<a href="https://www.threads.net/howesdecor/" target="_blank"><img src="images/legal/threads_logo.png"></a>
 				</div>
 			</section>
 		</div>
 
-		<section class="about-us-section">
-			<h2>About Us</h2>
-			
-			<div class="about-container">
-				<div class="about-text">
+		<div class="about-wrapper wrapper">
+			<section class="about-section">
+				<div class="main-container">
+					<h2 class="section-header">About us</h2>
 					<p>
 						<span id="about-para1">howesDecor. is a company which specializes in selling handcrafted, upcycled, and refinished furniture and home decor. Our company is local to the Okaloosa, FL. area and sells these products at our booth, #228, located at Defrance Antiques on Beal, Fort Walton Beach, Florida.</span> 
 						<span id="about-para1">We created howesDecor. to express our creativity through what we love doing, and have done for over a decade as a hobby. Now we are blessed with an opportunity to turn our passion into profit.</span>
@@ -93,9 +88,8 @@
 
 					<a href="about.html" class="link-to">Read full story</a>
 				</div>
-			</div>
-			
-		</section>
+			</section>
+		</div>
 	</article>
 
     <footer>
