--- a/contact.html
+++ b/contact.html
@@ -41,12 +41,13 @@
     <main>
         <article>
 			<div class="wrapper">
+				<section class=" page-about about">
+					<h2 class="article-header">About us</h2>
+				</section>
+				
 				<section class="email-section">
-					<section class=" page-about about">
-						<h2 class="article-header">Get in touch with us</h2>
-					</section>
-					
 					<div class="main-container">
+						<h3>Get in touch with us</h3>
 						<p>Need to get in touch with us? Send us an email, our response time may vary by the day, but we strive to respond to all emails within two-three business days.</p>
 						<a href="mailto:howesdecor@gmail.com" class="link-to email">Email us</a>
 					</div>
