--- a/contact.html
+++ b/contact.html
@@ -42,9 +42,9 @@
         <article>
 			<div class="wrapper">
 				<section class=" page-about about">
-					<h2 class="article-header">About us</h2>
+					<h2 class="article-header">Contact us</h2>
 				</section>
-				
+
 				<section class="email-section">
 					<div class="main-container">
 						<h3>Get in touch with us</h3>
