--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 
                     <p>We moved to the beautiful Emerald Coast in 2018 and enjoy spending our down time on the beach or water. We have 2 teenage boys, and 1 dog. Both of the boys have been involved in howesDecor, but mostly on the digital side of things: from photography to web development to running our socials.</p>
 
-                    <div class="blog-image">
+                    <div class="about-image">
                         <img src="images/other/james_madelyn.jpg" alt="May be an image of James and Madelyn, howesDecor owners, standing in front of a blue van.">
                         <figcaption>Darris Hartman Photography</figcaption>
                     </div>
