--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/indexHeroTest.css">
 	
 	<script defer src="javascript/featured.js"></script>
 
@@ -40,10 +40,15 @@
 	</nav>
 
     <header>
-        <section class="hero hero1">
-           <img src="images/logo_thin.png" alt="howes decor logo">
-		   <p>Handcrafted, up-cycled and refinished furniture and home decor.</p>
-            <a href="products.html" class="hero-cta">See our products</a>
+        <section class="hero">
+            <div class="hero-copy">
+                <h1>Handcrafted, up-cycled and refinished furniture and <span class="purple-emph">home decor</span>.</h1>
+                <p>We love taking a sad, broken piece of furniture that would be heading to the landfill and turning it into a beauty.</p>
+                <a href="products.html" class="link-to link-to-featured">See our products</a>
+            </div>
+            <div class="hero-img-container">
+				<img src="images/hero.png" class="hero-img" alt="hero image">
+			</div>
         </section>
     </header>
 
