--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,7 @@
 	<script defer src="javascript/tags.js"></script>
 	<script defer src="javascript/blog-controller.js"></script>
 	
+	<link rel="icon" type="image/x-icon" href="images/hdlogo.png">
 
     <title>Blog</title>
 
