--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,8 @@
 	
 	<script defer src="javascript/tags.js"></script>
 
+	<link rel="icon" type="image/x-icon" href="images/hdlogo.png">
+
     <title>Contact</title>
 
     <style></style>
