--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	
 	<script defer src="javascript/featured.js"></script>
 
+	<link rel="icon" type="image/x-icon" href="images/hdlogo.png">
+
     <title>Home</title>
 </head>
 <body>
@@ -53,14 +55,15 @@
     </header>
 
 	<article>
-		<section class="featured-products-section wrapper">
+		<div class="featured-products-section wrapper">
 			<noscript>This section of the app <strong>requires</strong> Javascript to be enabled to function properly.</noscript>
 			<h2>Featured Products</h2>
 			
 			<div class="featured-container">
+				<!-- javascript renders code here -->
 			</div>
 			<a href="products.html" class="link-to link-to-featured">See all products</a>
-		</section>
+		</div>
 
 		<div class="socials-wrapper wrapper">
 			<section class="socials-section">
