--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
 	
 	<script defer src="javascript/tags.js"></script>
 
+	<link rel="icon" type="image/x-icon" href="images/hdlogo.png">
+
     <title>About us</title>
 
     <style></style>
