--- a/products.html
+++ b/products.html
@@ -13,6 +13,8 @@
 	
 	<script defer src="javascript/tags.js"></script>
 	<script defer src="javascript/products-controller.js"></script>
+
+	<link rel="icon" type="image/x-icon" href="images/hdlogo.png">
 	
 
     <title>Products</title>
