--- a/template.html
+++ b/template.html
@@ -14,6 +14,8 @@
 	<script defer src="blog/javascript/main.js"></script>
 	<script defer src="blog/javascript/article0001.js"></script>
 
+	<link rel="icon" type="image/x-icon" href="images/hdlogo.png">
+
 
     <title>Blog</title>
 
